# api-gateway-rust

./: .gitignore  AWS_SETUP.md  README.md
api/: .dockerignore  Cargo.toml  Dockerfile  deploy.sh  package-lock.json  serverless.yaml
api/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
api/api-docs/: api_spec.yaml
api/users/: .dockerignore  Cargo.toml  Dockerfile
api/users-username/: .dockerignore  Cargo.toml
api/users-username/src/: main.rs
api/users/src/: main.rs
db_init/: Cargo.toml
db_init/src/: main.rs
users/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.OLD  Dockerfile.api  build.sh  build.sh.OLD  build_bundle.sh  deploy.sh  destroy.sh  update_lambda.sh
users/api_docs/: users_api_spec.yaml
users/src/: main.rs
users/terraform/: api_gateway.tf  dynamodb.tf  lambda.tf  main.tf  outputs.tf  variables.tf
users/terraform/policies/: lambda-role.json
users/terraform/state-storage/: main.tf  terraform.tfstate
