[package]
name = "users"
version = "0.1.0"
authors = ["Michael Habib <mhabib@pixability.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime"}
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
http = "0.1.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
