[package]
name = "users"
version = "0.1.0"
authors = ["Michael Habib <mhabib@pixability.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.2.0"
lambda_runtime_errors = "0.1.0"
lambda_http = "0.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
http = "0.1.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
