[package]
name = "users-username"
version = "0.1.0"
authors = ["Michael Habib <mhabib@pixability.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.2.0"
lambda_runtime_errors = "0.1.0"
lambda_http = "0.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
http = "0.1.1"
rusoto_core = "0.36.0"
rusoto_dynamodb = "0.36.0"
rusoto_mock = "0.30.0"
log = "^0.4"
simple_logger = "^1"

[[bin]]
name = "users-username"
path = "src/main.rs"
